...
                    android:description="@string/dcc_ticketing_consent_two_legal_point_2_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/legal_second_bulletpoint" />

                <de.rki.coronawarnapp.ui.view.BulletPointTextView
                    android:id="@+id/legal_second_bulletpoint_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginStart="@dimen/margin_46"
                    android:layout_marginEnd="@dimen/margin_24"
                    android:description="@string/dcc_ticketing_consent_two_legal_point_2_2"
...
                android:description="@string/dcc_ticketing_consent_two_point_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ticketing_first_bulletpoint" />

            <de.rki.coronawarnapp.ui.view.BulletPointTextView
                android:id="@+id/ticketing_third_bulletpoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:description="@string/dcc_ticketing_consent_two_point_3"
                app:layout_constraintStart_toStartOf="parent"
...
                android:description="@string/dcc_ticketing_consent_two_point_4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ticketing_third_bulletpoint" />

            <de.rki.coronawarnapp.ui.view.MoreInformationView
                android:id="@+id/privacy_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_32"
                android:layout_marginBottom="@dimen/margin_10"
                android:focusable="true"
...
