<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/submission_positive_other_privacy_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurface"
    android:contentDescription="@string/srs_submission_consent_header"
    android:fillViewport="true"
    tools:context=".srs.ui.consent.SrsSubmissionConsentFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/CWAMaterialToolbar.Close"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/srs_submission_consent_header" />

    <ScrollView
        android:id="@+id/content_scrollcontainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/srs_submission_consent_accept_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_24">

            <ImageView
                android:id="@+id/ic_srs_submission_consent_hero_illustration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/submission_test_result_available_illustration_description"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_test_result_illustration_result_available" />

            <TextView
                android:id="@+id/srs_submission_consent_headline"
                style="@style/headline5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:focusable="true"
                android:text="@string/srs_submission_consent_headline_text"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/ic_srs_submission_consent_hero_illustration" />

            <TextView
                android:id="@+id/srs_submission_consent_disclaimer_subheadline"
                style="@style/boldSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:focusable="true"
                android:text="@string/srs_submission_consent_disclaimer_subheadline_text"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/srs_submission_consent_headline" />

            <ImageView
                android:id="@+id/srs_section_warn_consent_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:importantForAccessibility="no"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/srs_submission_consent_disclaimer_subheadline"
                app:srcCompat="@drawable/ic_srs_virus" />

            <TextView
                android:id="@+id/srs_section_warn_consent"
                style="@style/subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:text="@string/srs_section_warn_consent_text"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toEndOf="@id/srs_section_warn_consent_image"
                app:layout_constraintTop_toTopOf="@id/srs_section_warn_consent_image" />

            <ImageView
                android:id="@+id/srs_section_warn_interval_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:importantForAccessibility="no"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/srs_section_warn_consent"
                app:srcCompat="@drawable/ic_srs_clock" />

            <TextView
                android:id="@+id/srs_section_warn_interval"
                style="@style/subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:text="@string/srs_section_warn_interval_text"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toEndOf="@id/srs_section_warn_interval_image"
                app:layout_constraintTop_toTopOf="@id/srs_section_warn_interval_image"
                tools:text="@string/srs_section_warn_interval_text" />

            <de.rki.coronawarnapp.ui.view.BulletPointDataPrivacyView
                android:id="@+id/srs_privacy_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_12"
                android:layout_marginVertical="@dimen/margin_24"
                android:subtitle="@string/srs_privacy_card_subtitle_text"
                android:title="@string/srs_privacy_card_title_text"
                app:bulletpointOne="@string/srs_privacy_card_first_bulletpoint_text"
                app:bulletpointThree="@string/srs_privacy_card_third_bulletpoint_text"
                app:bulletpointTwo="@string/srs_privacy_card_second_bulletpoint_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/srs_section_warn_interval" />

            <de.rki.coronawarnapp.ui.view.BulletPointTextView
                android:id="@+id/srs_bulletpoint_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_24"
                android:description="@string/srs_submission_consent_first_bulletpoint_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/srs_privacy_card" />

            <de.rki.coronawarnapp.ui.view.BulletPointTextView
                android:id="@+id/srs_bulletpoint_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_24"
                android:description="@string/srs_submission_consent_second_bulletpoint_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/srs_bulletpoint_one" />

            <de.rki.coronawarnapp.ui.view.BulletPointTextView
                android:id="@+id/srs_bulletpoint_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_24"
                android:description="@string/srs_submission_consent_third_bulletpoint_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/srs_bulletpoint_two" />

            <de.rki.coronawarnapp.ui.view.BulletPointTextView
                android:id="@+id/srs_bulletpoint_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_24"
                android:description="@string/srs_submission_consent_fourth_bulletpoint_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/srs_bulletpoint_three" />

            <de.rki.coronawarnapp.ui.view.BulletPointTextView
                android:id="@+id/srs_bulletpoint_five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_24"
                android:description="@string/srs_submission_consent_fifth_bulletpoint_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/srs_bulletpoint_four" />

            <TextView
                android:id="@+id/srs_next_step_submission"
                style="@style/subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:focusable="true"
                android:text="@string/srs_next_step_submission_text"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/srs_bulletpoint_five" />


            <de.rki.coronawarnapp.ui.view.MoreInformationView
                android:id="@+id/srs_submission_consent_more_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_24"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/srs_next_step_submission"
                app:titleText="@string/srs_submission_consent_legal_link_text" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/margin_24" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/margin_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/srs_submission_consent_accept_button"
        style="@style/buttonPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:text="@string/submission_accept_button"
        app:layout_constraintBottom_toTopOf="@id/srs_submission_consent_cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content_scrollcontainer" />

    <Button
        android:id="@+id/srs_submission_consent_cancel_button"
        style="@style/buttonPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:text="@string/srs_submission_warning_dialog_negative_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/srs_submission_consent_accept_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
